<resources>
    <string name="app_name">GPS Bluetooth Transmitter</string>
    <string name="connect_bluetooth">Connect Bluetooth</string>
    <string name="disconnect_bluetooth">Disconnect Bluetooth</string>
    <string name="send_location">Send Location</string>
    <string name="auto_send">Auto Send</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting...</string>
    <string name="status_connected">Connected</string>
    <string name="location_status">Location Status</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="logs">Logs</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="permission_required">Location permission is required for GPS functionality</string>
    <string name="bluetooth_permission_required">Bluetooth permission is required</string>
    <string name="enable_bluetooth">Please enable Bluetooth</string>
    <string name="no_bluetooth">This device does not support Bluetooth</string>
    <string name="auto_send_interval">Auto Send Interval (seconds)</string>
</resources>
